Add example for list endpoint state filter

--- a/openapi/payTo.yaml
+++ b/openapi/payTo.yaml
@@ -471,7 +471,7 @@ paths:
           type: string
       - name: state
         description: Filter agreements by state. Multiple values can be separated
-          by commas.
+          by commas. e.g 'pending,created'
         in: query
         explode: false
         schema:
@@ -1755,7 +1755,7 @@ paths:
           type: string
       - name: state
         description: Filter payments by state. Multiple values can be separated by
-          commas.
+          commas. e.g 'created,submitting'
         in: query
         explode: false
         schema:
