deploy: b08252dc6ef46c5d660943b8046fcbc09726568f

--- a/redocusaurus/plugin-redoc-0.yaml
+++ b/redocusaurus/plugin-redoc-0.yaml
@@ -910,7 +910,7 @@ paths:
         - name: state
           description: >-
             Filter agreements by state. Multiple values can be separated by
-            commas.
+            commas. e.g 'pending,created'
           in: query
           explode: false
           schema:
@@ -1626,7 +1626,7 @@ paths:
         - name: state
           description: >-
             Filter payments by state. Multiple values can be separated by
-            commas.
+            commas. e.g 'created,submitting'
           in: query
           explode: false
           schema:
